src/objects/Competitive_Intelligence__c.object
<CustomObject>
    <description>Database to add and store competitive intelligence data.  Originally created for Packaging.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Account_Type__c</field>
                <operation>notEqual</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Competitive_Intelligence1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Category__c</fullName>
        <label>Activity/Category</label>
        <picklist>
            <picklistValues>
                <fullName>Capacity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Run</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <label>Business Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Bev Can</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bev End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steel Container</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>City_Country__c</fullName>
        <label>City/Country</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>3M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actega</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AKZO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancoat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ChaCheng</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemtool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colormatrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concorrente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diostyl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dupont</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dyo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eagle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Coatings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eclatin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecopaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecuabarnices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evipac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F&amp;H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fineshine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grace Darex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Henkel</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Conversion_Date_Time__c</fullName>
        <label>Conversion Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Conversion_Date__c</fullName>
        <label>Conversion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Path__c</fullName>
        <label>Document Path</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Region__c</fullName>
        <label>Global Region</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico/Central America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_End_Use__c</fullName>
        <label>Market / End Use</label>
        <picklist>
            <picklistValues>
                <fullName>Bev Can 2PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bev Can 2PC-Base Coat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bev Can 2PC-Dome Spray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bev Can 2PC-Inks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bev Can 2PC-Inside Spray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bev Can 2PC-Rimcoat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bev Can 2PC-Varnish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bev Can 3PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bev Can 3PC-Dome Spray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bev Can 3PC-Inks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bev Can 3PC-Inside Spray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bev Can 3PC-Rimcoat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bev Can 3PC-Varnish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bev Can 3PC-White Base Coat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bev End-E-Coat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bev End Exterior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bev End-Interior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bev End Retort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bev End-Tabstock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTC-Barrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTC-Laminate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food-2PC DRD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food-3PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food-D&amp;I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food-Exterior Varnish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food-EZOE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food-Inside Spray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food-Pealable Membrane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food-Post Repair Spray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food-Powder</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Competitive_Intelligence</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting/Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technology_Chemistry__c</fullName>
        <label>Technology/Chemistry</label>
        <picklist>
            <picklistValues>
                <fullName>Acrylic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BFDGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epoxy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epoxy Phenolic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formaldehyde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laminate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LONO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melamine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-BPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oleo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phenolic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polyester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polyester Phenolic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solvent-based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vinyl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water-based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Competitive Intel</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_Name__c</columns>
        <columns>Topic__c</columns>
        <columns>Detail__c</columns>
        <columns>Source__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Pkg_All</fullName>
        <columns>NAME</columns>
        <columns>Global_Region__c</columns>
        <columns>Competitor__c</columns>
        <columns>Business_Segment__c</columns>
        <columns>Market_End_Use__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Topic__c</columns>
        <columns>Activity_Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Pkg All</label>
        <sharedTo>
            <role>Sys_Admin</role>
            <roleAndSubordinatesInternal>PackagingBUAdmin</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>PackagingExecutivesManagers_NA</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>PackagingRepSalesTechCS_NA</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Packaging_Executives_and_Managers_EMEAI</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Packaging_Executives_and_Managers_Global</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Packaging_Executives_and_Managers_SAf</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Packaging_Global_Exec_EMEAI_Industrial_Wood</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Packaging_Reps_Sales_Tech_CSR_EMEAI</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Packaging_Reps_Sales_Tech_CSR_SAf</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Packaging_Wood_Mir_Executives_and_Managers_EMEAI</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CI-{000000}</displayFormat>
        <label>Comp Intel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitive Intel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>